--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
     <footer>
         <div class="container footer-inner">
-            <div>© <span id="year"></span> Your Name. All rights reserved.</div>
+            <div>© <span id="year"></span> Abesh Singha. All rights reserved.</div>
             <div class="social-links">
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
@@ -258,5 +258,6 @@
         document.getElementById("year").textContent = new Date().getFullYear();
     </script>
 </body>
+
 
 </html>
