--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         function handleSubmit(event) {
             event.preventDefault();
             document.getElementById("form-status").textContent =
-                "This is a demo form. Connect it to a real backend.";
+                "This is a prototype, further changes will be done in the future.";
             event.target.reset();
         }
 
@@ -261,3 +261,4 @@
 
 
 </html>
+
