--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <li><b>Things i am good at:</b></li><br>
                         <li>Problem Solving</li>
                         <li>AutoCAD</li>
-                        <li>HTML | CSS | JS</li>
+                        <li>HTML | Tailwind | JS | React.js</li>
                         <Li>Python</Li>
                     </ul>
                 </div>
@@ -152,15 +152,14 @@
 
                 <article class="project-card">
                     <div class="project-name">Project Two</div>
-                    <div class="project-tagline">Automated YouTube Playlist Downloader<br>
+                    <div class="project-tagline">Made a landing page for a client<br>
 
                     </div>
 
 
-                    <p>Uses:
-                        pytube or YouTube API<br>
-                        CLI for input playlist link<br>
-                        Downloads + organizes into folders</p>
+                    <p>Made a clean, professional frontend webpage for a consulting person based in US.<br>
+                    https://consultingwebs.netlify.app/
+                    </p>
 
                     <div class="project-footer">
                         <div>Tech: Python</div>
@@ -261,4 +260,5 @@
 
 
 </html>
+
 
