--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 
                     <p>Made a clean, professional frontend webpage for a consulting person based in US.<br>
-                    <a href="https://consultingwebs.netlify.app/" target="_blank">Click to open in new tab</a>
+                    <a href="https://consultingwebs.netlify.app/" target="_blank">|click me to open in new tab|</a>
                     </p>
 
                     <div class="project-footer">
@@ -260,6 +260,7 @@
 
 
 </html>
+
 
 
 
