--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </p>
 
                     <div class="project-footer">
-                        <div>Tech: Python</div>
+                        <div>Tech: HTML | TAILWIND | JS</div>
                         <div class="project-links">
                             <a href="#">Details</a>
                         </div>
@@ -260,6 +260,7 @@
 
 
 </html>
+
 
 
 
